[gd_scene load_steps=7 format=3 uid="uid://b6kaaaqphs6mv"]

[ext_resource type="Script" uid="uid://hywsynhg1uu5" path="res://scenes/windup_gizmo/wind_up_gizmo.gd" id="1_edxmb"]
[ext_resource type="Shader" uid="uid://hf3ps7in7kiy" path="res://scenes/enemy/composite_material.gdshader" id="2_0rred"]
[ext_resource type="Texture2D" uid="uid://dpwkrirbioubl" path="res://icon.svg" id="2_8vqp0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ru0l5"]
shader = ExtResource("2_0rred")
shader_parameter/fill_color = Color(1, 1, 1, 1)
shader_parameter/fill_enabled = false
shader_parameter/grayscale_enabled = false
shader_parameter/weighted = true
shader_parameter/outline_enabled = false
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/width = 4.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yjeoo"]
size = Vector2(56, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_mwtyu"]
radius = 32.0

[node name="WindUpGizmo" type="Node2D"]
script = ExtResource("1_edxmb")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ru0l5")
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_8vqp0")

[node name="TurnKey" type="Line2D" parent="."]
unique_name_in_owner = true
points = PackedVector2Array(-24, 0, 24, 0, 0, 0)
width = 4.0

[node name="Polygon2D" type="Polygon2D" parent="TurnKey"]
visible = false
position = Vector2(24, 0)
color = Color(0, 1, 1, 1)
polygon = PackedVector2Array(8, -8, -8, -8, -8, 8, 8, 8)

[node name="Polygon2D2" type="Polygon2D" parent="TurnKey"]
scale = Vector2(0.25, 0.25)
color = Color(0.992064, 0.750537, 0, 1)
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[node name="KeyArea" type="Area2D" parent="TurnKey"]
position = Vector2(24, 0)
collision_layer = 32768
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnKey/KeyArea"]
position = Vector2(-24, 0)
shape = SubResource("RectangleShape2D_yjeoo")

[node name="RechargeArea" type="Area2D" parent="."]
position = Vector2(0, 48)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RechargeArea"]
shape = SubResource("CircleShape2D_mwtyu")
